fix(backup): preserve command-bound restore snapshots and enforce native warning gates